# mcc-rag-assistant

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/api/: __init__.py  routes_admin_docs.py  routes_chat.py  routes_health.py
app/core/: config.py  logging.py
app/ingestion/: ingest.py  loaders.py
app/integrations/: whatsapp.py
app/rag/: chunking.py  embeddings.py  qa.py  strength.py  vector_store.py
docs/seed/: parking.md
scripts/: run_dev.sh
src/mcc_rag_assistant/: __init__.py  cli.py  config.py  retrieval.py
